cmake_minimum_required(VERSION 3.24)
project(Ex4ab)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ex4ab sources/Character.cpp sources/Cowboy.cpp sources/Ninja.cpp sources/OldNinja.cpp sources/Point.cpp sources/SmartTeam.cpp sources/Team.cpp sources/Team2.cpp sources/TrainedNinja.cpp sources/YoungNinja.cpp Test.cpp TestCounter.cpp Demo.cpp StudentTest1.cpp TestRunner.cpp myDemo.cpp)
